--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1276,13 +1276,87 @@ section,
   background-color: var(--accent-color);
   width: 80rem;
   height: auto;
-  padding: 15px 15px;
+  padding: 0 4vh 2vh 5vh;
 }
 
 .card-officials h4{
  color: var(--secondary-color);
 }
 
+.card-officials p{
+  color: #ffffff;
+ }
+
+/*--------------------------------------------------------------
+# ECC Faculty Section
+--------------------------------------------------------------*/
+.ecc-faculty {
+  width: 100%;
+  min-height: 75vh;
+  position: relative;
+  padding: 160px 0 100px 0;
+}
+
+.faculty h1{
+  color: var(--accent-color);
+}
+
+.gallery {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+}
+
+.gallery a {
+  display: block;
+  position: relative;
+}
+
+/* Fixed size for images */
+.gallery a img {
+  width: 190px; /* Set a fixed width */
+  height: 300px; /* Set a fixed height */
+  object-fit: cover; /* Ensures images maintain aspect ratio without distortion */
+  display: block;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+/* Bottom inner shadow effect on hover */
+.gallery a::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40%; /* Shadow height */
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.gallery a:hover::before {
+  opacity: 1;
+}
+
+/* Title appears on hover */
+.gallery a::after {
+  content: attr(data-title);
+  position: absolute;
+  bottom: 5px;
+  left: 0;
+  width: 100%;
+  padding: 5px;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  font-size: 0.9em;
+  text-align: center;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.gallery a:hover::after {
+  opacity: 1;
+}
 
 
 /*--------------------------------------------------------------
