center the logo and ecc for responsive screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -176,11 +176,11 @@ h6 {
 }
 
 .header .logo {
-  width: 90px;
+  width: 3.5rem;
 }
 
 .header .logo2 {
-  width: 60px;
+  width: 3.5rem;
 }
 
 .hc {
