--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -937,7 +937,7 @@ section,
   flex-direction: column;
   text-align: center;
   position: relative;
-  min-height: 75vh;
+  min-height: 100vh;
   color: white;
 }
 
@@ -998,7 +998,6 @@ section,
 
 .carousel-details {
   position: absolute;
-  top: 10%; /* Moves details to the top */
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
@@ -1031,6 +1030,59 @@ section,
   display: inline-block;
   padding: 12px 24px; /* Added padding for better button sizing */
   font-size: 16px; /* Slightly larger font for better readability */
+}
+
+.btn-details {
+  color: var(--contrast-color);
+  font-family: var(--heading-font);
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1px;
+  padding: 12px 30px;
+  transition: 0.3s;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  border: white 2px solid;
+  background: transparent;
+}
+
+.btn-details:hover {
+  background: color-mix(in srgb, var(--accent-color), transparent 20%);
+  color: #fff;
+  text-decoration: none;
+}
+
+.zoomable {
+  transition: transform 0.3s ease;
+  cursor: zoom-in;
+}
+
+.zoomed {
+  transform: scale(1.8); /* adjust zoom level */
+  cursor: zoom-out;
+}
+
+.btn-news{
+  background: var(--accent-color);
+  color: var(--contrast-color);
+  font-family: var(--heading-font);
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1px;
+  padding: 12px 30px;
+  transition: 0.3s;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+}
+
+.btn-news:hover {
+  background: color-mix(in srgb, var(--accent-color), transparent 20%);
+  color: #fff;
+  text-decoration: none;
 }
 
 
@@ -1390,6 +1442,29 @@ section,
   width: 3.5rem;
 }
 
+/*--------------------------------------------------------------
+# ECC News Section
+--------------------------------------------------------------*/
+.news-section {
+  padding: 20px 0;
+}
+
+.news-heading{
+  color: var(--accent-color);
+  margin-bottom: 20px;
+}
+
+.news-heading span{
+ font-size: 2.5rem;
+}
+
+.news-section .card {
+  transition: transform 0.3s;
+}
+
+.news-section .card:hover {
+  transform: translateY(-5px);
+}
 
 /*--------------------------------------------------------------
 # Contact Section
