- Update the layout and color of Admin Dashboard - Add dedicated page for the carousel and news - Add FAQ page and add into the database

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1451,6 +1451,21 @@ section,
 }
 
 /*--------------------------------------------------------------
+# ECC FAQ Section
+--------------------------------------------------------------*/
+.ecc-faq {
+  width: 100%;
+  min-height: 75vh;
+  position: relative;
+  padding: 160px 0 100px 0;
+}
+
+.accordion-button:not(.collapsed) {
+    color: #cc2e28;            
+}
+
+
+/*--------------------------------------------------------------
 # Contact Section
 --------------------------------------------------------------*/
 .contact .info-item {
